--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         cd /opt/rt-n56u/trunk
         sudo ./clear_tree
-        sudo ./build_firmware_modify K2P_nano-5.0  #修改为你需要的固件型号
+        sudo ./build_firmware_modify K2P_nano-5.0
         sudo mv -f images/*.trx /opt/images/
     - name : 上传固件
       uses: actions/upload-artifact@master
