--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -15,29 +15,28 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
-    - name: Checkout
+    - name: 开始自动编译
       uses: actions/checkout@master
-    - name: 配置编译环境
+    - name: 安装依赖项
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo apt-get update
         sudo apt install unzip libtool-bin curl cmake gperf gawk flex bison nano xxd fakeroot cpio git python-docutils gettext automake autopoint texinfo build-essential help2man pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget module-init-tools
-    - name: 下载源码
+    - name: 下载源码并配置编译环境
       run: |
         git clone --depth=1 https://github.com/hanwckf/rt-n56u.git /opt/rt-n56u
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
-    - name: 编译固件
+    - name: 编译Padavan固件
       run: |
         cd /opt/rt-n56u/trunk
         sudo ./clear_tree
         sudo ./build_firmware_modify K2P_nano-5.0
-        sudo mv -f images/*.trx /opt/images/
     - name : 上传固件
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: Padavan-packages
-        path: /opt/images
+        name: Padavan固件
+        path: /opt/rt-n56u/trunk/images
