--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -15,7 +15,7 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
-    - name: 开始自动编译
+    - name: Checkout
       uses: actions/checkout@master
     - name: 安装依赖项
       env:
@@ -34,9 +34,10 @@ jobs:
         cd /opt/rt-n56u/trunk
         sudo ./clear_tree
         sudo ./build_firmware_modify K2P_nano-5.0
+        sudo mv -f images/*.trx /opt/images/
     - name : 上传固件
       uses: actions/upload-artifact@master
       if: always()
       with:
-        name: Padavan固件
-        path: /opt/rt-n56u/trunk/images
+        name: Padavan-packages
+        path: /opt/images
